# NM

./: Makefile  ai.py  ai_model.py  ai_model_eval.py  pyproject.toml  test.py
data_extraction/: api_entsoe.xml  api_meteo.py  combined_meteo_data.csv
saved_models/: lstm_model_10YCA-BULGARIA-R_seq168.keras  lstm_model_10YCA-BULGARIA-R_seq72.keras
