[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "electricity-price-forecaster"
version = "0.1.0"
description = "LSTM model for forecasting electricity prices using ENTSO-E and Open-Meteo data."
requires-python = ">=3.12"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "requests>=2.25",
    "pandas>=1.3",
    "numpy>=1.20",
    "pytz",
    "scikit-learn>=1.0",
    "tensorflow>=2.8",
    "matplotlib>=3.4",
]
